leaderstyles.css
.item{
  display: grid;
}
.leader1{
  grid-area: leader1;
}
.photo1{
  grid-area: photo1;
}
.leader2{
  grid-area: leader2;
}
.photo2{
  grid-area: photo2;
}
.leader3{
  grid-area: leader3;
}
.photo3{
  grid-area: photo3;
}
.leader4{
  grid-area: leader4;
}
.photo4{
  grid-area: photo4;
}
.photo5{
  grid-area: photo5;
}
.leader5{
  grid-area: leader5;
}
.photo6{
  grid-area: photo6;
}
.leader6{
  grid-area: leader6;
}
.leader1, .leader2, .leader3, .leader4, .leader5, .leader6{
  margin-top: 40px;
  margin-left: 40px;
  padding-right: 60px;
}
.leader2 p{
  margin: 0;
}
.container{
  display: grid;
  grid-template-columns: repeat(2, 200px 1fr);
  grid-template-rows: 3fr 3fr;
  grid-template-areas:
  "photo1 leader1 photo2 leader2"
  "photo3 leader3 photo4 leader4"
  "photo5 leader5 photo6 leader6"
}

